--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -27,8 +27,8 @@ jobs:
       # uses: jurplel/install-qt-action@b3ea5275e37b734d027040e2c7fe7a10ea2ef946
       uses: jurplel/install-qt-action@v3.3.0
 
-    - name: Build Proto
-      uses: idbi/build-proto-action@main
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v2
       
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
